Added a site layout

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<h1>Contact Us</h1>
+<h1>About Us</h1>
 <p>
 This is the homepage for the <a href="https://github.com/ordiedordie/sample_app">Dordie on Rails github tutorial</a> sample application.
 </p>
