--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Welcome to Sample App</h1>
+<p>
+This is the homepage for the <a href="https://github.com/ordiedordie/sample_app">Dordie on Rails github tutorial</a> sample application.
+</p>
+</body>
