--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
 	<title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
 	<%= csrf_meta_tag %>
+	<%= stylesheet_link_tag 'bootstrap', :media => 'screen' %>
+	<%= stylesheet_link_tag 'bootstrap', :media => 'print' %>
 </head>
 	<body>
 		<%= yield %>
