--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<h1>Happn.me</h1>
+<h1>Dordie.me</h1>
 <p>
 This is the homepage for the <a href="https://github.com/ordiedordie/sample_app">Dordie on Rails github tutorial</a> sample application.
 </p>
 </body>
 <input type="text">
-<%= link_to "Subscribe", '#', :class=> "btn btn-primary btn-large" %>
+<%= link_to "Subscribe", signup_path, :class=> "btn btn-primary btn-large" %>
