created a user model with annotations

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,6 @@
 This is the homepage for the <a href="https://github.com/ordiedordie/sample_app">Dordie on Rails github tutorial</a> sample application.
 </p>
 </body>
-<input type="text">
-<%= link_to "Subscribe", signup_path, :class=> "btn btn-primary btn-large" %>
+<!--<input type="text">--> 
+
+<%= link_to "Sign Up!", signup_path, :class=>  "btn btn-primary btn-large"  %>
