--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 		</section>
 		</div>
 		<%= render 'layouts/footer'%>
+		<%= debug(params) if Rails.env.development? %>
 		</div>
 	</body>
 </html>
